--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,13 @@
 
-.carousel-item{
-    height: 88vh;
-    min-height: 300px;
-    background: no-repeat scroll center scroll;
-    -webkit-background-size:cover;
-    background-size: cover;
-}
-.carousel-item::before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: black;
-    opacity: 0.4;
-}
 
-
-@media only screen and (min-width: 0px) and (max-width: 992px)
+@media only screen and (min-width: 374px) and (max-width: 992px)
  {
    .company{
     display: none;
    }
 }
 
-@media (min-width: 992px) {
-    .title {
-      font-size: 4rem;
-    }
-  }
+@media only screen and (min-width:374px) and (max-width:992px) {
+  
+}
+
